fix(Landing): text not centered

--- a/styles/pages/landing.scss
+++ b/styles/pages/landing.scss
@@ -163,7 +163,6 @@
 
 .landing-big-section-text {
 	max-width: 40%;
-	margin-bottom: 10%;
 }
 
 .landing-big-title {
